--- a/script_include/index.html
+++ b/script_include/index.html
@@ -8,8 +8,22 @@
     <script type="text/javascript" src="./js/vue.js"></script>
   </head>
   <body>
+    <!-- 1.想讓vue工作，就必須創建一個vue實例，且要配置一個object 
+     2.root容器依然符合html規範，只是混入了一些特殊的vue語法 
+     3.root容器裡的代碼被稱為vue模板 -->
+    <!-- 準備好一個容器 -->
+    <div id="root"><h1>hello,{{name}}</h1></div>
     <script type="text/javascript">
       Vue.config.productionTip = false; //prevent the production tip on Vue startup.
+      // 創建一個vue實例
+      new Vue({
+        el: "#root", //el:element找root這個CSS id選擇器，值通常為css選擇器字符串，也可以用el:document.getElementById("root")
+        data: {
+          //data鐘用於儲存數據，數據供el所指定的容器使用，先暫時寫成object，以後用component會使用function
+          name: "Kenny",
+          age: "27",
+        },
+      });
     </script>
   </body>
 </html>
