--- a/script_include/index.html
+++ b/script_include/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Script Include</title>
-    <script type="text/javascript" src="./js/vue.js"></script>
+    <script type="text/javascript" src="../js/vue.js"></script>
   </head>
   <body>
     <!-- 1.想讓vue工作，就必須創建一個vue實例，且要配置一個object 
@@ -40,18 +40,33 @@
     <script type="text/javascript">
       Vue.config.productionTip = false; //prevent the production tip on Vue startup.
       // 創建一個vue實例
-      new Vue({
-        el: "#root", //el:element找root這個CSS id選擇器，值通常為css選擇器字符串，也可以用el:document.getElementById("root")
-        data: {
-          //data鐘用於儲存數據，數據供el所指定的容器使用，先暫時寫成object，以後用component會使用function
-          name: "Kenny",
-          age: "27",
-          website: {
-            name: "youtube",
-            url: "https://www.youtube.com/",
-          },
+      const vm = new Vue({
+        // el: "#root", //第一種寫法，el:element找root這個CSS id選擇器，值通常為css選擇器字符串，也可以用el:document.getElementById("root")
+        // data: {
+        //   //第一種寫法，對象式，data鐘用於儲存數據，數據供el所指定的容器使用，先暫時寫成object，以後用component會使用function
+        //   name: "Kenny",
+        //   age: "27",
+        //   website: {
+        //     name: "youtube",
+        //     url: "https://www.youtube.com/",
+        //   },
+        // },
+
+        data: function () {
+          console.log("123", this); //此處的this是Vue，不能用arrow function 不然this指向的是windows
+          //第二種寫法，函數式
+          return {
+            name: "Kenny",
+            age: "27",
+            website: {
+              name: "youtube",
+              url: "https://www.youtube.com/",
+            },
+          };
         },
       });
+
+      vm.$mount("#root"); //第二種寫法
     </script>
   </body>
 </html>
