--- a/11.conditional_rendering/1.conditionalRendering.html
+++ b/11.conditional_rendering/1.conditionalRendering.html
@@ -10,14 +10,36 @@
   </head>
   <body>
     <div id="root">
+      <h2>n的值:{{n}}</h2>
+      <button @click="n++">n+1</button>
+      <!-- v-else-if v-else 元素須連續  中間不許有其他非判斷元素插入 -->
+      <h2 v-if="n===1">n=1</h2>
+      <h2 v-else-if="n===2">n=2</h2>
+
+      <!-- <h2>中間不許有這個元素打斷 沒有v-判斷</h2> -->
+      <h2 v-else-if="n===3">n=3</h2>
+      <h2 v-else="">n=else</h2>
       <!-- 僅視覺消失 元素還存在 -->
       <h2 v-show="flase">test</h2>
-      <h2>test2</h2>
+      <h2 v-show="1 ===1">test1</h2>
+
+      <!-- 使用v-if作條件渲染  元素不存在 -->
+      <h2 v-if="flase">test2</h2>
+      <h2 v-if="1 ===1">test3</h2>
+
+      <!-- template 只能搭配v-if  與div不同的是 不會破壞元素結構 -->
+      <template v-if="n===1">
+        <h2>template1</h2>
+        <h2>template2</h2>
+        <h2>template3</h2>
+      </template>
     </div>
     <script type="text/javascript">
       new Vue({
         el: "#root",
-        data: {},
+        data: {
+          n: 0,
+        },
       });
     </script>
   </body>
